# FastAPI_lessons_PET_store

./: README.md  items_views.py  main.py  pyproject.toml
API v1/products/: crud.py
api_v1/: __init__.py
api_v1/products/: crud.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helpers.py
users/: crud.py  views.py
