[tool.poetry]
name = "lessons"
version = "0.1.0"
description = ""
authors = ["calistal <calistal@student.21-school.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.0.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
